Update location path for "Job Market" in `config-example.json` and `config.json`; adjust timer values and `gpRateSamples` entries.

--- a/config-example.json
+++ b/config-example.json
@@ -18,7 +18,7 @@
       "roomId": "4b11616f93c94e3c766bb5ad9cba3b61dcc73979"
     },
     {
-      "name": "Job Market",
+      "name": "Regions/Ankh-Morpork/Job Market",
       "roomId": "a5846b0acd26afec87c2dc20daa7ccadecc94cff"
     },
     {
