--- a/config.json
+++ b/config.json
@@ -27,7 +27,7 @@
       "roomId": "4b11616f93c94e3c766bb5ad9cba3b61dcc73979"
     },
     {
-      "name": "Job Market",
+      "name": "Regions/Ankh-Morpork/Job Market",
       "roomId": "a5846b0acd26afec87c2dc20daa7ccadecc94cff"
     },
     {
@@ -549,7 +549,7 @@
       },
       "timers": {
         "Foreign Goods": {
-          "expirationTime": 1769351658064,
+          "expirationTime": 1769357076851,
           "durationMs": 3600000
         }
       },
@@ -557,7 +557,7 @@
         4,
         4,
         4,
-        1,
+        4,
         4
       ],
       "hpRateSamples": [
@@ -627,15 +627,15 @@
       },
       "timers": {
         "Foreign Goods": {
-          "expirationTime": 1769350637635,
+          "expirationTime": 1769356645565,
           "durationMs": 3600000
         }
       },
       "gpRateSamples": [
-        4,
         3,
         4,
-        4,
+        3,
+        3,
         4
       ],
       "hpRateSamples": [
@@ -653,7 +653,7 @@
       },
       "timers": {
         "Foreign Goods": {
-          "expirationTime": 1769350023875,
+          "expirationTime": 1769355912636,
           "durationMs": 3600000
         }
       },
