Add "Krimat's Foreign Exchange" room and update `config.json` with new money exchange location

--- a/config.json
+++ b/config.json
@@ -335,6 +335,10 @@
     {
       "name": "Vaults/Jonas\u0027 Vault",
       "roomId": "66cdb7f0e0fd006c472e00abf2fb23348bb74337"
+    },
+    {
+      "name": "Money Changers/From/Ephebe/To Ankh-Morpork/Krimat\u0027s Foreign Exchange",
+      "roomId": "4c9b04fc5c87eb5f2c742dde897ed2be2ac8aa80"
     }
   ],
   "characters": {
